--- a/languages/sh/self.org
+++ b/languages/sh/self.org
@@ -1,1 +1,4 @@
 - tool: awk like in cli, with haskell flavor https://github.com/gelisam/hawk
+- tool: json to grep-able format https://github.com/tomnomnom/gron
+- tool: shell https://www.nushell.sh/
+- tool: language+shell https://github.com/refaktor/rye
