--- a/languages/ml/purescript/self.org
+++ b/languages/ml/purescript/self.org
@@ -1,21 +1,14 @@
 - home https://www.purescript.org/
 
 - https://en.wikipedia.org/wiki/PureScript
+  - Author: Phil Freeman
   - strict language (not lazy)
   - transpiles to JavaScript, C++11, Erlang, and Go
   - has "row polymorphism"
   - has "extensible records"
 
-- Getting started https://github.com/purescript/documentation/blob/master/guides/Getting-Started.md
+- https://github.com/purescript/documentation/blob/master/guides/Getting-Started.md
 - https://github.com/alpacaaa/elm-to-purescript-cheatsheet
-
-- book
-  https://github.com/JordanMartinez/purescript-jordans-reference
-  https://jordanmartinez.github.io/purescript-jordans-reference-site/
-
-- book
-  https://github.com/purescript-contrib/purescript-book
-  https://book.purescript.org/
 
 - libraries
   - https://github.com/passy/awesome-purescript
