--- a/languages/css.org
+++ b/languages/css.org
@@ -9,6 +9,8 @@
 - CSS Grid https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/CSS_Grid_Layout_and_Accessibility
 - CSS Grid examples and patterns https://gridbyexample.com/
 - Logical Properties https://www.youtube.com/watch?v=cnwOfaE5GEk
+
+
 * Book: 18 | Learning Web Design | Jennifer Robbins | O'Reilly
 https://learningwebdesign.com/5e/materials/
 ** 18 Transitions, Transforms, and Animation
@@ -1424,3 +1426,49 @@ n   - Those that are "lengths" can cause issue if calculated with a unit and inh
    - width:
      - *box-sizing: content-box* is defined for the content
      - *box-sizing: border-box* IE 5.5 define it for content+padding+border
+* Book: 23 | TIny CSS Projects   | Michael Gearon   | Manning
+
+** 10 Styling forms
+
+- background properties
+  - object-fit
+  - background-position
+  - background-size
+  - background-image
+
+- <input> does NOT inherit font styles by default (color,font-family)
+
+#+begin_src css
+  body {
+    margin: 0;
+    padding: 2rem;
+  }
+
+  main {  /* we limit the max size and center */
+    margin: 1rem auto;
+    max-width: 1200px;
+  }
+
+  fieldset { /* we reset the style */
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+
+  input:not([type="radio"],[type="checkbox"]),
+  textarea,
+  select { /* inverse selection, in this case, for input fields only */
+    font-size: 1rem;
+    font-family: inherit; /* by default it is NOT inherit */
+    color: inherit;
+    border: none; /* we have it blend in */
+    border-bottom: solid 1px var(--primary);
+    boder-image: linear-gradient(to right, var(--primary), var(--accent)) 1; /* for the border-bottom */
+    padding: 0 0 .25rem;
+    width: 100%;
+  }
+
+  textarea { resize: vertical } /* disable horizontal resizing, which might break the style layout */
+#+end_src
+
+280page
