--- a/languages/sh/sed/self.org
+++ b/languages/sh/sed/self.org
@@ -91,24 +91,36 @@ eg: "/Sebastopol/s/CA/California/g" performs the substituion ONLY on lines coint
 
 * snippets
 https://sed.sourceforge.io/#scripts
-|-----------------------+------------+-------------------------------------------------------------------------------|
-| $=                    |            | prints the number of lines (slow?)                                            |
-| =;n                   |            | interleaves printing the number of line every 2 numbers (1,3..) and each line |
-| 1p                    | -n         | prints first line                                                             |
-| $p                    | -n         | prints last line                                                              |
-| 2d                    |            | delete line 2                                                                 |
-| 1i #Managed by sed    | /etc/hosts | adds comment to the /top/ of the input                                        |
-| $a 8.8.8.8 google.com | /etc/hosts | adds ip/hostname at the /end/ of the input                                    |
-| /^ /d                 |            | filters out lines starting with space                                         |
-| /^ *$/d               |            | filters out lines containing only spaces                                      |
-| s/.*/Hello/;q         |            | reads 1st line of input and prints "Hello"                                    |
-| /needle/d             |            | deletes lines containing "needle"                                             |
-| s/needle//g           |            | deletes "needle" from lines                                                   |
-| 50,$d                 |            | deletes from line 50 to the end                                               |
-| 1,/^$/d               |            | deletes from 1st line to the first blank line                                 |
-| /---/!s/--/\\(em/g    |            | on all lines that do not have 3(-), replace 2(-)                              |
-| s/.$//                |            | dos2unix, aka CRLF to LF                                                      |
-|-----------------------+------------+-------------------------------------------------------------------------------|
+|-----------------------+---------------+-------------------------------------------------------------------------|
+| p                     |               | prints every line twice                                                 |
+| p                     | -n            | prints every line                                                       |
+| 1p                    | -n            | prints first line                                                       |
+| $p                    | -n            | prints last line                                                        |
+| 1,3p                  | -n            | prints lines 1 through 3                                                |
+| 20,$p                 | -n            | prints from line 20 to end                                              |
+|-----------------------+---------------+-------------------------------------------------------------------------|
+| =;n                   |               | interleaves printing line number, every 2 numbers (1,3..) and each line |
+| $=                    | -n            | prints the number of lines (slow?)                                      |
+|-----------------------+---------------+-------------------------------------------------------------------------|
+| $a 8.8.8.8 google.com | -i /etc/hosts | appends ip/hostname at the end                                          |
+| 1i #Managed by sed    | -i /etc/hosts | inserts before line 1, a comment                                        |
+| $d                    | -i /etc/hosts | deletes last line                                                       |
+|-----------------------+---------------+-------------------------------------------------------------------------|
+| 2d                    |               | delete line 2                                                           |
+| /^ /d                 |               | filters out lines starting with space                                   |
+| /^ *$/d               |               | filters out lines containing only spaces                                |
+| 50,$d                 |               | deletes from line 50 to the end                                         |
+| /needle/d             |               | deletes lines containing "needle"                                       |
+| 1,/^$/d               |               | deletes from 1st line to the first blank line                           |
+| /^(#¦$)/d             | -E            | remove comments and empty lines                                         |
+| /^\s*(#¦$)/d          | -E            | remove comments, indentend comments, and empty lines                    |
+|-----------------------+---------------+-------------------------------------------------------------------------|
+| /---/!s/--/\\(em/g    |               | on all lines that do not have 3(-), replace 2(-)                        |
+|-----------------------+---------------+-------------------------------------------------------------------------|
+| s/.*/Hello/;q         |               | reads 1st line of input and prints "Hello"                              |
+| s/needle//g           |               | deletes "needle" from lines                                             |
+| s/.$//                |               | dos2unix, aka CRLF to LF                                                |
+|-----------------------+---------------+-------------------------------------------------------------------------|
 #+TBLFM: $1=;n
 ** remove before (#)
   sed -i -n '/#/,$p' file.txt
