--- a/languages/sh/sed/videos.org
+++ b/languages/sh/sed/videos.org
@@ -32,6 +32,7 @@ https://www.youtube.com/watch?v=cbpNdzKLg4c
 - $ watch time sed -E -f x.sed sample1.txt
 - TODO: 00:03:00
 * Course: Linux Administration with SED and AWK | Andrew Mallett
+source https://github.com/theurbanpenguin/sed-and-awk
 ** 1
 
 #+begin_src sh
@@ -59,3 +60,7 @@ https://www.youtube.com/watch?v=cbpNdzKLg4c
   1) BRE - Basic Regular Expresions
   2) ERE - Enhanced Regular Expressions
 - 05:00
+** 3 SED - The (S)tream (Ed)itor
+
+$ vim +/Server/ file.conf
+$ vim +10 file.conf
